--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -47,10 +47,11 @@
     <servlet-mapping>
         <servlet-name>SpringMVC</servlet-name>
         <!-- 此处可以可以配置成*.do，对应struts的后缀习惯 -->
-        <url-pattern>/*</url-pattern>
+        <url-pattern>/</url-pattern>
         <!--<url-pattern>*.json</url-pattern>
         <url-pattern>*.html</url-pattern>-->
     </servlet-mapping>
+
     <welcome-file-list>
         <welcome-file>/index.jsp</welcome-file>
     </welcome-file-list>
