20180317: finished SSM+REDIS Step.1 running

--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,7 @@
   </properties>
 
   <dependencies>
+
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
@@ -30,11 +31,26 @@
       <scope>test</scope>
     </dependency>
 
+    <!-- redis config begin -->
+    <!-- Ehcache实现,用于参考 -->
+    <dependency>
+      <groupId>org.mybatis</groupId>
+      <artifactId>mybatis-ehcache</artifactId>
+      <version>1.0.0</version>
+      <exclusions>
+        <exclusion>
+          <artifactId>slf4j-api</artifactId>
+          <groupId>org.slf4j</groupId>
+        </exclusion>
+      </exclusions>
+    </dependency>
+    <!-- redis客户端jar -->
     <dependency>
       <groupId>redis.clients</groupId>
       <artifactId>jedis</artifactId>
       <version>2.9.0</version>
     </dependency>
+    <!-- spring-redis实现 -->
     <dependency>
       <groupId>org.springframework.data</groupId>
       <artifactId>spring-data-redis</artifactId>
@@ -66,6 +82,7 @@
         </exclusion>
       </exclusions>
     </dependency>
+    <!-- redis config end -->
 
     <dependency>
       <groupId>javax.servlet</groupId>
@@ -250,6 +267,12 @@
       <groupId>ch.qos.logback</groupId>
       <artifactId>logback-classic</artifactId>
       <version>1.1.2</version>
+      <exclusions>
+        <exclusion>
+          <artifactId>slf4j-api</artifactId>
+          <groupId>org.slf4j</groupId>
+        </exclusion>
+      </exclusions>
     </dependency>
     <dependency>
       <groupId>ch.qos.logback</groupId>
@@ -260,6 +283,18 @@
       <groupId>org.logback-extensions</groupId>
       <artifactId>logback-ext-spring</artifactId>
       <version>0.1.1</version>
+      <exclusions>
+        <exclusion>
+          <artifactId>logback-classic</artifactId>
+          <groupId>ch.qos.logback</groupId>
+        </exclusion>
+      </exclusions>
+    </dependency>
+
+    <dependency>
+      <groupId>org.aspectj</groupId>
+      <artifactId>aspectjweaver</artifactId>
+      <version>1.7.4</version>
     </dependency>
 
 
@@ -276,6 +311,15 @@
         <directory>src/main/java</directory>
         <includes>
           <include>**/*.xml</include>
+        </includes>
+        <filtering>true</filtering>
+      </resource>
+      <!-- 解决：maven不编译resources下的配置文件 -->
+      <resource>
+        <directory>src/main/resources</directory>
+        <includes>
+          <include>*.xml</include>
+          <include>*.properties</include>
         </includes>
         <filtering>true</filtering>
       </resource>
