--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -1,5 +1,5 @@
 #定义LOG输出级别
-log4j.rootLogger=INFO,Console,File  
+log4j.rootLogger=INFO,Console,File,WARN, stdout  
 
 log4j.logger.org.springframework=INFO 
 log4j.debug=true
@@ -20,4 +20,13 @@ log4j.appender.File.MaxFileSize = 10MB
 # 输出所以日志，如果换成DEBUG表示输出DEBUG以上级别日志
 log4j.appender.File.Threshold = ALL  
 log4j.appender.File.layout = org.apache.log4j.PatternLayout  
-log4j.appender.File.layout.ConversionPattern =[%p] [%d{yyyy-MM-dd HH\:mm\:ss}][%c]%m%n  
+log4j.appender.File.layout.ConversionPattern =[%p] [%d{yyyy-MM-dd HH\:mm\:ss}][%c]%m%n
+
+log4j.appender.stdout=org.apache.log4j.ConsoleAppender
+log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
+log4j.appender.stdout.layout.ConversionPattern=%d %p [%c] - %m%n
+
+log4j.appender.logfile=org.apache.log4j.FileAppender
+log4j.appender.logfile.File=target/spring.log
+log4j.appender.logfile.layout=org.apache.log4j.PatternLayout
+log4j.appender.logfile.layout.ConversionPattern=%d %p [%c] - %m%n
