--- a/pom.xml
+++ b/pom.xml
@@ -336,6 +336,18 @@
           <skipTests>true</skipTests>
         </configuration>
       </plugin>
+      <!-- 指定maven-compiler-plugin的版本，
+           该版本会同时影响LanguageLevel和JavaCompiler，修改后默认就成了这里设置的版本。
+      -->
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <version>2.3.2</version>
+        <configuration>
+            <source>1.8</source>
+            <target>1.8</target>
+        </configuration>
+      </plugin>
     </plugins>
   </build>
 </project>
